--- a/src/views/ingreso/registro.hbs
+++ b/src/views/ingreso/registro.hbs
@@ -10,12 +10,12 @@
                         <h3>Registro</h3>
                     </div>
                     <div class="card-body">
-                        <form action="/paginas/registro" method="post">
+                        <form action="/registro" method="POST">
                             <div class="input-group mb-3">
                                 <input type="text" class="form-control" name="usuario" placeholder="Usuario" autofocus >
                             </div>
                             <div class="input-group mb-3">
-                                <input type="text" class="form-control" name="contrasenia" placeholder="Contraseña" >
+                                <input type="password" class="form-control" name="contrasenia" placeholder="Contraseña" >
                             </div>
                             <div class="input-group mb-3">
                                 <input type="text" class="form-control" name="nombre" placeholder="Nombre" >
