--- a/src/views/ingreso/ingreso.hbs
+++ b/src/views/ingreso/ingreso.hbs
@@ -15,7 +15,7 @@
                                 <input type="text" class="form-control" name="usuario" placeholder="Usuario" autofocus >
                             </div>
                             <div class="input-group mb-3">
-                                <input type="text" class="form-control" name="contrasenia" placeholder="Contraseña" >
+                                <input type="password" class="form-control" name="contrasenia" placeholder="Contraseña" >
                             </div>
                             <div class="d-grid mb-2">
                                 <button type="submit" class="btn btn-success btn-block">
