cambie el acceso del boton ingreso

--- a/src/views/ingreso/ingreso.hbs
+++ b/src/views/ingreso/ingreso.hbs
@@ -27,7 +27,7 @@
                     <div class="card-footer">
                         <span><b>¿Aún no tienes cuenta? </b></span>
                         <div class="d-grid mb-2">
-                        <button onclick="location.href='/paginas/registro'" class="btn btn-info btn-block" >
+                        <button onclick="location.href='/registro'" class="btn btn-info btn-block" >
                            <span style="color: white">Crear Usuario</span> 
                         </button>
                         </div>
