--- a/src/views/partials/barra.hbs
+++ b/src/views/partials/barra.hbs
@@ -5,7 +5,7 @@
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">
                             <span data-feather="home"></span>
-                            AppAsionados
+                            APPasionados
                         </a>
                     </li>
                     <li class="nav-item">
