--- a/src/views/ingreso/ingreso.hbs
+++ b/src/views/ingreso/ingreso.hbs
@@ -31,6 +31,12 @@
                            <span style="color: white">Crear Usuario</span> 
                         </button>
                         </div>
+                         <span><b>¿Aún no tienes cuenta? </b></span>
+                        <div class="d-grid mb-2">
+                        <button onclick="location.href='/paginas/registro'" class="btn btn-info btn-block" >
+                           <span style="color: white">Crear Usuario</span> 
+                        </button>
+                        </div>
                     </div>
                 </div>
             </div>
