provisoriamente cambie el passport registro

--- a/src/views/ingreso/ingreso.hbs
+++ b/src/views/ingreso/ingreso.hbs
@@ -10,7 +10,7 @@
                         <h3>Ingresar</h3>
                     </div>
                     <div class="card-body">
-                        <form action="/paginas/ingreso" method="post">
+                        <form action="/ingreso" method="post">
                             <div class="input-group mb-3">
                                 <input type="text" class="form-control" name="usuario" placeholder="Usuario" autofocus >
                             </div>
