--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -25,7 +25,7 @@ h3 {
         background-color: rgb(202, 236, 202);
  }
  .formulario {
-       background-image: url(../img/stadium.jpg);
+       background-image: url(../img/verde2.jpg);
        background-position: center center;
        background-repeat: no-repeat;
        background-size: cover;
