--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -15,15 +15,15 @@ h3 {
 #eslogan {
     font-family: 'Dosis', sans-serif;
     font-family: 'Lobster', cursive;
-    color: rgb(14, 13, 13);
+    color: rgb(255, 255, 255);
 }
 .py-5 {
        margin-top: 4.5rem;
  }
  .app {
-    font-family: 'Dosis', sans-serif;
-    font-family: 'Lobster', cursive;
-     color: rgb(8, 189, 62);
+    /* font-family: 'Dosis', sans-serif; */
+    /* font-family: 'Lobster', cursive; */
+     color: rgb(250, 250, 250);
      margin-left: 3rem;
      font-size: 80px;
      padding-top: 2rem;
@@ -36,7 +36,7 @@ h3 {
         background-color: rgb(202, 236, 202);
  }
  .formulario {
-       background-image: url(../img/fut.jpg);
+       background-image: url(../img/verde1.jpg);
        background-position: center center;
        background-repeat: no-repeat;
        background-size: cover;
