--- a/src/views/ingreso/ingreso.hbs
+++ b/src/views/ingreso/ingreso.hbs
@@ -1,16 +1,15 @@
 <main class="formulario">
     <div class="container">
         <div class="row">
-
             <div class="col-md-5 p-2">
                 <h1 class="app">APPasionados</h1>
             </div>
-
-            <div class="row row justify-content-between">
-                <div class="col-md-8">
+        </div>
+        <div class="row justify-content-between">
+            <div class="col-md-8">
                     <h2 id="eslogan" class="p-3">Tus deportes favoritos en una sola App, <br>sé un APPasionado más!</h2>
-                </div>
-                <div class="col-md-4 py-4">
+            </div>
+            <div class="col-md-4 py-4">
                     <div class="card">
                         <div class="card-header">
                             <h3>Ingresar</h3>
@@ -48,9 +47,7 @@
 
                         </div>
                     </div>
-                </div>
             </div>
-
         </div>
     </div>
 </main>
