--- a/src/views/ingreso/registro.hbs
+++ b/src/views/ingreso/registro.hbs
@@ -1,10 +1,15 @@
 <main class="formulario">
     <div class="container">
-        <div class="row justify-content-between">
-            <div class="col-md-4 p-3">
-                <h1 class="formu">AppAsionados</h1>
+        <div class="row">
+            <div class="col-md-5 p-2">
+                <h1 class="app">APPasionados</h1>
             </div>
-            <div class="col-md-4 py-5">
+        </div>
+        <div class="row justify-content-between">
+            <div class="col-md-8">
+                <h2 id="eslogan" class="p-3">Tus deportes favoritos en una sola App, <br>sé un APPasionado más!</h2>
+            </div>
+            <div class="col-md-4 py-4">
                 <div id="card" class="card">
                     <div class="card-header">
                         <h3>Registro</h3>
@@ -12,19 +17,19 @@
                     <div class="card-body">
                         <form action="/registro" method="POST">
                             <div class="input-group mb-3">
-                                <input type="text" class="form-control" name="usuario" placeholder="Usuario" autofocus >
+                                <input type="text" class="form-control" name="usuario" placeholder="Usuario" autofocus>
                             </div>
                             <div class="input-group mb-3">
-                                <input type="password" class="form-control" name="contrasenia" placeholder="Contraseña" >
+                                <input type="password" class="form-control" name="contrasenia" placeholder="Contraseña">
                             </div>
                             <div class="input-group mb-3">
-                                <input type="text" class="form-control" name="nombre" placeholder="Nombre" >
+                                <input type="text" class="form-control" name="nombre" placeholder="Nombre">
                             </div>
                             <div class="input-group mb-3">
                                 <input type="text" class="form-control" name="apellido" placeholder="Apellido">
                             </div>
                             <div class="input-group mb-3">
-                                <input type="email"  class="form-control" name="e_mail" placeholder="E-mail" >
+                                <input type="email" class="form-control" name="e_mail" placeholder="E-mail">
                             </div>
                             <div class="d-grid mb-2">
                                 <button type="submit" class="btn btn-success btn-block">
