agregue nueva pagina, el mensaje flash e inicio de sesion

--- a/src/views/ingreso/registro.hbs
+++ b/src/views/ingreso/registro.hbs
@@ -17,19 +17,19 @@
                     <div class="card-body">
                         <form action="/registro" method="POST">
                             <div class="input-group mb-3">
-                                <input type="text" class="form-control" name="usuario" placeholder="Usuario" autofocus>
-                            </div>
-                            <div class="input-group mb-3">
-                                <input type="password" class="form-control" name="contrasenia" placeholder="Contraseña">
-                            </div>
-                            <div class="input-group mb-3">
-                                <input type="text" class="form-control" name="nombre" placeholder="Nombre">
+                                <input type="text" class="form-control" name="nombre" placeholder="Nombre" autofocus>
                             </div>
                             <div class="input-group mb-3">
                                 <input type="text" class="form-control" name="apellido" placeholder="Apellido">
                             </div>
+                             <div class="input-group mb-3">
+                                <input type="email" class="form-control" name="email" placeholder="E-mail">
+                            </div>
                             <div class="input-group mb-3">
-                                <input type="email" class="form-control" name="e_mail" placeholder="E-mail">
+                                <input type="text" class="form-control" name="nombreUsuario" placeholder="Usuario">
+                            </div>
+                            <div class="input-group mb-3">
+                                <input type="password" class="form-control" name="contrasenia" placeholder="Contraseña">
                             </div>
                             <div class="d-grid mb-2">
                                 <button type="submit" class="btn btn-success btn-block">
