--- a/src/views/ingreso/futbol.hbs
+++ b/src/views/ingreso/futbol.hbs
@@ -2,15 +2,27 @@
     <nav class="navbar navbar-dark bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="/deporte">
-            <img src="/img/logo4.png" alt="" width="50" height="50" class="d-inline-block align-text-top">
-            <h2 style="display: inline-block" >APPasionados</h2>
+                <img src="/img/logo4.png" alt="" width="60" height="60" class="d-inline-block ">
+                <h2 style="display: inline-block" >APPasionados</h2>
             </a>
-            <form class="d-flex">
-                <input class="form-control me-2" type="search" placeholder="Buscar equipo" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Buscar</button>
-            </form>
+            <li class="nav-item">
+                <a class="nav-link " href="#" tabindex="-1" aria-disabled="true" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">Bienvenido Juan Perez</a>
+            </li>
+      
+            <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
+                <div class="offcanvas-header">
+                     <h4 id="offcanvasRightLabel">Juan Perez</h4>
+                    <div class="offcanvas-header">
+                        <i class="mailUsuario">juanperez@gmail.com</i>
+                    </div>
+                    <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                </div>
+                <div class="offcanvas-body">
+                    <a class="nav-link link-danger " href="/inicio" tabindex="-1" aria-disabled="true" >Cerrar sesión</a>
+                </div>
+            </div>
         </div>
-    </nav>
+  </nav>
     
     <div class="container-fluid">
         <div class="tablaEquipo col-md-5">
