--- a/src/views/partials/mensajeFlash.hbs
+++ b/src/views/partials/mensajeFlash.hbs
@@ -22,3 +22,16 @@
     </div>
 </div>
 {{/if}}
+{{#if mensajeMal}}
+<div class="container">
+    <div class="row">
+        <div class="col-md-4 mx-auto">
+            <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                 <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Success:"><use xlink:href="#check-circle-fill"/></svg>
+                {{mensajeMal}}
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close" >{{!-- <span aria-hidden="true">&times; </span> --}}</button>
+            </div>
+        </div>
+    </div>
+</div>
+{{/if}}
