vamos a corregir la pagina

--- a/src/views/ingreso/registro.hbs
+++ b/src/views/ingreso/registro.hbs
@@ -8,7 +8,7 @@
         <div class="row justify-content-between">
             <div class="col-md-4 py-5">
                 <!--agregue logo de la app -->
-                <a title="logoApp" href='/inicio' ><img src="/img/logo4.png" alt="logoApp" width="250"/></a>
+                <a title="logoApp" href="../paginas/inicio" ><img src="/img/logo4.png" alt="logoApp" width="250"/></a>
                 <!--<h1 class="formu">AppAsionados</h1>-->
             </div>
             <div class="col-md-4 py-4">
