--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -41,6 +41,7 @@ h6 {
      margin-left: 3rem;
      font-size: 80px;
      padding-top: 2rem;
+ }
 
 
 .formu {
@@ -66,6 +67,7 @@ h6 {
 .card {
     border-radius: 0.5rem;
     opacity: 0.8;
+}
 
 .formulario {
   background-image: url(../img/fondoImg.jpg);
@@ -75,7 +77,7 @@ h6 {
   background-attachment: fixed;
   height: 39rem;
   padding-bottom: 0%;
-  margin-bottom: 0%;
+  margin-bottom: 0%
        
 }
 
