me mato la cabeza el session no funciona

--- a/src/views/partials/mensajeFlash.hbs
+++ b/src/views/partials/mensajeFlash.hbs
@@ -21,8 +21,7 @@
           <use xlink:href="#check-circle-fill" />
         </svg>
         {{mensajeOk}}
-        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close">{{!-- <span
-            aria-hidden="true">&times; </span> --}}</button>
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
       </div>
     </div>
   </div>
@@ -35,12 +34,8 @@
       <div class="alert alert-danger alert-dismissible fade show" role="alert">
         <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Danger:">
          <use xlink:href="#exclamation-triangle-fill"/></svg>
-         <div>
-           {{mensajeMal}}
-         </div>
-         
-        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close">{{!-- <span
-            aria-hidden="true">&times; </span> --}}</button>
+           {{mensajeMal}}    
+          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
       </div>
     </div>
   </div>
