--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -1,4 +1,4 @@
-.inicio {
+#inicio {
   background-image: url(../img/imgInicio.jpg);
   background-position: center center;
   background-repeat: no-repeat;
@@ -23,11 +23,7 @@ h6 {
     color: rgb(255, 255, 255);
 }
 
-.py-5 {
-  margin-top: 4.5rem;
- }
-
-.app {
+#app {
 /*font-family: 'Dosis', sans-serif;
   font-family: 'Lobster', cursive; */
   color: rgb(250, 250, 250);
@@ -37,30 +33,16 @@ h6 {
 
 }
 
-.formu {
-  color: rgb(255, 255, 255);
-}
-
 #sidebarMenu {
   position: fixed;
   top: 8rem;
   background-color: rgb(202, 236, 202);
  }
 
-/*.formulario {
-  background-image: url(../img/verde1.jpg);
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-attachment: fixed;
-  height: 39rem; 
-  padding-bottom: 0%;
-  margin-bottom: 0%;
-
-   }*/
 .card {
     border-radius: 0.5rem;
     opacity: 0.8;
+    text-align: center;
 }
 .formulario {
   background-image: url(../img/fondoImg.jpg);
@@ -74,17 +56,12 @@ h6 {
        
 }
 
-.card {
-  border-radius: 0.5rem;
-  text-align: center;
-}
-
 .card-header, .card-footer {
   border-style: none;
    
 }
 
-.futbol {
+#futbol {
   background-color: rgba(19, 95, 0, 0.555);
   background-image: url(../img/fut1.jpg);
   background-position: center center;
@@ -95,7 +72,7 @@ h6 {
     
 }
 
-.tablaEquipo {
+#tablaEquipo {
   background: rgba(255, 254, 254, 0.61);
 }
 
@@ -111,27 +88,31 @@ h6 {
   height: 34rem;
 }
 
-.citaAutor {
+#citaAutor {
   font-style: italic;
 }
   
-.btnCentro {
+#btnCentro {
   display: flex;
   align-items: center;
   justify-content: center;  
 }
 
-.linkCentro {
+#linkCentro {
   background: rgba(255, 255, 255, 0.452);
   width:230px; 
   margin: 70px 
 }
 
 .offcanvas {
-  background: rgba(216, 216, 216, 0.897);
+  background: rgba(185, 185, 185, 0.897);
   color: rgb(0, 0, 0);
 }
 
-.mailUsuario {
-  color: rgb(95, 95, 95);
+#barraDesplegable {
+  background: rgb(192, 192, 192);
+}
+
+.modal-title, .modal-body {
+  color: wheat;
 }
