--- a/src/views/paginas/deporte.hbs
+++ b/src/views/paginas/deporte.hbs
@@ -1,74 +1,30 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>APPasionados</title>
-
-    <link href="../../public/css/style.css" rel="stylesheet">
-  </head>
-  <body>
-    
-<header>
-  <nav class="navbar navbar-dark bg-dark">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="/deporte">
-        <img src="/img/logo4.png" alt="" width="60" height="60" class="d-inline-block ">
-        <h2 style="display: inline-block" >APPasionados</h2>
-      </a>
-      <li class="nav-item">
-        <a class="nav-link " href="#" tabindex="-1" aria-disabled="true" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">Bienvenido Juan Perez</a>
-      </li>
-      
-      <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
-        <div class="offcanvas-header">
-          <h4 id="offcanvasRightLabel">Juan Perez</h4>
-          <div class="offcanvas-header">
-            <i class="mailUsuario">juanperez@gmail.com</i>
-          </div>
-            <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-        </div>
-        <div class="offcanvas-body">
-          <div class="container-fluid">
-            <a class="nav-link active" aria-current="page" href="#">
-              <span data-feather="home"></span>
-              Perfil
-            </a>
-          </div>
-          <a class="nav-link link-danger " href="/inicio" tabindex="-1" aria-disabled="true">Cerrar sesión</a>
-        </div>
-      </div>
-    </div>
-  </nav>
-</header>
-
-<main>
-
   <div id="myCarousel" class="carousel slide" data-ride="carousel">
-    <div class="carousel-inner" data-interval="5000">
+    <div class="carousel-inner">
       <div class="carousel-item active">
-        <img class="d-block w-100" src="./img/futbol.jpg" alt="futbol">
+        <img class="d-block w-100" src="/img/futbol.jpg" alt="futbol">
         <div class="carousel-caption text-start">
           <h1>FÚTBOL</h1>
-          <p class="citaAutor">"El fútbol se juega con la cabeza, los pies son solo tu herramienta."</p>
+          <p id="citaAutor">"El fútbol se juega con la cabeza, los pies son solo tu herramienta."</p>
           <p>Andrea Pirlo</p>
           <p><a class="btn btn-lg btn-success d-grid gap-2 col-6 mx-auto" href="./futbol">Ingresar</a></p>
         </div>
       </div>
+
       <div class="carousel-item">
-        <img class="d-block w-100" src="./img/basquet.jpg" alt="basquet">
+        <img class="d-block w-100" src="/img/basquet.jpg" alt="basquet">
         <div class="carousel-caption text-start">
           <h1>BASQUET</h1>
-          <p class="citaAutor">"El talento gana partidos, pero el trabajo en equipo y la inteligencia ganan campeonatos."</p>
+          <p id="citaAutor">"El talento gana partidos, pero el trabajo en equipo y la inteligencia ganan campeonatos."</p>
           <p>Michael Jordans</p>
           <p><a class="btn btn-lg btn-danger d-grid gap-2 col-6 mx-auto" href="./basquet">Ingresar</a></p>
         </div>
       </div>
+      
       <div class="carousel-item">
-        <img class="d-block w-100" src="./img/padel.jpg" alt="padel">
+        <img class="d-block w-100" src="/img/padel.jpg" alt="padel">
         <div class="carousel-caption text-start">
           <h1>PADEL</h1>
-          <p class="citaAutor">"No importa cómo te llegue la bola, siempre mirala con muchas ganas."</p>
+          <p id="citaAutor">"No importa cómo te llegue la bola, siempre mirala con muchas ganas."</p>
           <p>Fernando Belasteguin</p>
           <p><a class="btn btn-lg btn-primary d-grid gap-2 col-6 mx-auto" href="./padel">Ingresar</a></p>
         </div>
@@ -76,16 +32,10 @@
     </div>
     <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
+      <span class="sr-only"></span>
     </a>
     <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
+      <span class="sr-only"></span>
     </a>
   </div>
-</main>
-
-
-
-  </body>
-</html>
