--- a/src/views/paginas/futbol.hbs
+++ b/src/views/paginas/futbol.hbs
@@ -1,35 +1,11 @@
-<div class="futbol">
-    <nav class="navbar navbar-dark bg-dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="/deporte">
-                <img src="/img/logo4.png" alt="" width="60" height="60" class="d-inline-block ">
-                <h2 style="display: inline-block" >APPasionados</h2>
-            </a>
-            <li class="nav-item">
-                <a class="nav-link " href="#" tabindex="-1" aria-disabled="true" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">Bienvenido Juan Perez</a>
-            </li>
-      
-            <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
-                <div class="offcanvas-header">
-                     <h4 id="offcanvasRightLabel">Juan Perez</h4>
-                    <div class="offcanvas-header">
-                        <i class="mailUsuario">juanperez@gmail.com</i>
-                    </div>
-                    <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-                </div>
-                <div class="offcanvas-body">
-                    <a class="nav-link link-danger " href="/inicio" tabindex="-1" aria-disabled="true" >Cerrar sesión</a>
-                </div>
-            </div>
-        </div>
-  </nav>
-    
+<div id="futbol">
+  
     <div class="container-fluid">
-        <div class="tablaEquipo col-md-5">
+        <div id="tablaEquipo" class="col-md-5">
             <h2><b>EQUIPOS</b></h2>
         </div>
     
-        <div class="tablaEquipo col-md-5">
+        <div id="tablaEquipo" class="col-md-5">
             <table class="table table-hover">
                 <thead>
                     <tr>
