--- a/src/views/partials/barra.hbs
+++ b/src/views/partials/barra.hbs
@@ -1,44 +1,122 @@
-<div class="container-fuid">
-        <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block sidebar collapse">
-            <div class="position-sticky pt-3">
-                <ul class="nav flex-column">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">
-                            <span data-feather="home"></span>
-                            APPasionados
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            <span data-feather="file"></span>
-                            Productos
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            <span data-feather="shopping-cart"></span>
-                            Servicios
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            <span data-feather="users"></span>
-                            Customers
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            <span data-feather="bar-chart-2"></span>
-                            Reports
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            <span data-feather="layers"></span>
-                            Integrations
-                        </a>
-                    </li>
-                </ul>
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="/paginas/deporte">
+            <img src="/img/logo4.png" alt="" width="60" height="60" class="d-inline-block ">
+            <h2 style="display: inline-block" >APPasionados</h2>
+        </a>
+        <li class="nav-item">
+            <a class="nav-link " href="#" tabindex="-1" aria-disabled="true" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">Bienvenido Juan Perez</a>
+        </li>
+        <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
+            <div class="offcanvas-header">
+                <h4 id="offcanvasRightLabel">Juan Perez</h4>
+                <div class="offcanvas-header">
+                    <i>juanperez@gmail.com</i>
+                </div>
+                <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
-        </nav>
+            <div class="offcanvas-body">
+                <div class="container-fluid">
+                    <a class="nav-link active" aria-current="page">
+                        <div class="btn-group dropend">
+                            <a  href="#" class="link link-dark dropdown-toggle" type="link" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                                Ver Perfil
+                            </a>
+                            <ul id="barraDesplegable" class="dropdown-menu" aria-labelledby="navbarDarkDropdownMenuLink">
+                                <div class="container-md">
+                                    <li><span >Apodo</span><h6>Juani</h6></li>
+                                    <li><hr class="dropdown-divider"></li>
+                                    <li><span >Cuenta</span><h6>Jugador</h6></li>
+                                    <li><hr class="dropdown-divider"></li>
+                                    <a href="#" class="link link-success" type="link" data-bs-toggle="modal" data-bs-target="#exampleModal">Actualizar Nombre</a>
+                                    <li><hr class="dropdown-divider"></li>
+                                    <a href="#" class="link link-success" type="link" data-bs-toggle="modal" data-bs-target="#exampleModal2">Actualizar Apodo</a>
+                                </div>
+                            </ul>
+                        </div>
+                    </a>
+                    <a class="nav-link active" aria-current="page">
+                        <div class="btn-group dropend">
+                            <a  href="#" class="link link-dark dropdown-toggle" type="link" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                                Mis Equipos
+                            </a>
+                            <ul id="barraDesplegable" class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                                <div class="container-md">
+                                    <li>
+                                        Fútbol -
+                                        <a href="/paginas/equipo" class="link link-success" type="link">FC Barca</a>
+                                    </li>
+                                    <li><hr class="dropdown-divider"></li>
+                                    <li>
+                                        Básquet -
+                                        <a href="#" class="link link-success" type="link"></a>
+                                    </li>
+                                    <li><hr class="dropdown-divider"></li>
+                                    <li>
+                                        Pádel -
+                                        <a href="#" class="link link-success" type="link"></a>
+                                    </li>
+                                </div>
+                            </ul>
+                        </div>
+                    </a>
+                </div>
+                <br>
+                <div class="container-fluid">
+                    <a class="link link-danger " href="/" tabindex="-1" aria-disabled="true">Cerrar sesión</a>
+                </div>
+            </div>
+        </div>
     </div>
+
+</nav>
+
+ <!-- Modal Actualizar Nombre-->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content bg-dark">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Actualizar nombre</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <form action="" method="POST">
+                    <b>Nombre actual</b>
+                    <input type="text" class="form-control" name="nombre" placeholder="Nombre usuario" autofocus>
+                    <b>Nuevo nombre</b>
+                    <input type="text" class="form-control" name="nombre nuevo" placeholder="Nuevo nombre usuario">  
+                </form> 
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cancelar</button>
+                <button type="button" class="btn btn-success">Actualizar</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Modal Actualizar Apodo-->
+<div class="modal fade" id="exampleModal2" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content bg-dark">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Actualizar apodo</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <form action="" method="POST">
+                    <b>Apodo Actual</b>
+                    <input type="text" class="form-control" name="apodo" placeholder="Apodo usuario" autofocus>
+                    <b>Nuevo apodo</b>
+                    <input type="text" class="form-control" name="apodo nuevo" placeholder="Nuevo apodo usuario">  
+                </form> 
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cancelar</button>
+                <button type="button" class="btn btn-success">Actualizar</button>
+            </div>
+        </div>
+    </div>
+</div>
+
