--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -101,7 +101,8 @@ h6 {
 #linkCentro {
   background: rgba(255, 255, 255, 0.452);
   width:230px; 
-  margin: 70px 
+  margin: 70px;
+  text-align: center;
 }
 
 .offcanvas {
