--- a/src/views/paginas/inicio.hbs
+++ b/src/views/paginas/inicio.hbs
@@ -9,7 +9,7 @@
                 <img src="/img/logo4.png" alt="Logo App" class="mx-1" width="300px">                
             </div>
             <div id="btnCentro" class="col-md py-5 mx-auto">
-                <a href="ingreso" type="button" class="btn btn-warning btn-lg" data-bs-toggle="tooltip" data-bs-placement="top" title="Inicia como cancha para ingresar tu establecimiento deportivo.">CANCHA</a>                
+                <a href="paginas/cancha" type="button" class="btn btn-warning btn-lg" data-bs-toggle="tooltip" data-bs-placement="top" title="Inicia como cancha para ingresar tu establecimiento deportivo.">CANCHA</a>                
             </div>
         </div>
     </div>
