--- a/src/views/partials/mensajeFlash.hbs
+++ b/src/views/partials/mensajeFlash.hbs
@@ -33,9 +33,10 @@
     <div class="col-md-4 mx-auto">
       <div class="alert alert-danger alert-dismissible fade show" role="alert">
         <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Danger:">
-         <use xlink:href="#exclamation-triangle-fill"/></svg>
-           {{mensajeMal}}    
-          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+          <use xlink:href="#exclamation-triangle-fill" />
+        </svg>
+        {{mensajeMal}}
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
       </div>
     </div>
   </div>
