--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -15,10 +15,10 @@
 
 
 
-    <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     
     <script src="https://npmcdn.com/tether@1.2.4/dist/js/tether.min.js"></script>
-    -->
+    
 
     <title>APPasionados</title>
 </head>
