agregue ingreso y registro dueño,centre pantalla inicio, modifique barra

--- a/src/views/ingreso/ingresoDuenio.hbs
+++ b/src/views/ingreso/ingresoDuenio.hbs
@@ -1,4 +1,4 @@
-<main class="formulario">
+<div id="inicioDuenio">
     <div class="container">
         <div class="row justify-content-between">
             <div id= "inicioCentrar" class="col-md-4 py-5">
@@ -12,7 +12,7 @@
                         <h3>Ingresar</h3>
                     </div>
                     <div class="card-body">
-                        <form action="/ingreso" method="POST">
+                        <form action="/ingresoDuenio" method="POST">
                             <div class="input-group mb-3">
                                 <input type="text" class="form-control" name="nombreUsuario" placeholder="Usuario" autofocus >
                             </div>
@@ -29,7 +29,7 @@
                     <div class="card-footer">
                         <span><b>¿Aún no tienes cuenta? </b></span>
                         <div class="d-grid mb-2">
-                        <button onclick="location.href='/registro'" class="btn btn-primary btn-block" >
+                        <button onclick="location.href='/registroDuenio'" class="btn btn-primary btn-block" >
                            <span style="color: white">Regístrate</span> 
                         </button>
                         </div>
@@ -38,4 +38,4 @@
             </div>
         </div>
     </div>
-</main>
+</div>
