--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -10,6 +10,7 @@ body {
   height: 39rem;
   padding-bottom: 0%;
   margin-bottom: 0%;
+  
 }
 
 h3 {
@@ -44,7 +45,9 @@ h6 {
   background-attachment: fixed;
   height: 39rem;
   padding-bottom: 0%;
-  margin-bottom: 0%
+  margin-bottom: 0%;
+  display: flex;
+  align-items: center;
        
 }
 
@@ -60,7 +63,7 @@ h6 {
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
-  height: 39rem;
+  height: 33rem;
     
 }
 
@@ -77,7 +80,7 @@ h6 {
   
   /* Declare heights because of positioning of img element */
 .carousel-item {
-  height: 34rem;
+  height: 33rem;
 }
 
 #citaAutor {
@@ -88,18 +91,19 @@ h6 {
   display: flex;
   align-items: center;
   justify-content: center;  
+  margin: 100px;
 }
 
 #linkCentro {
-  background: rgba(255, 255, 255, 0.452);
+  background: rgba(255, 255, 255, 0.63);
   width:230px; 
-  margin: 70px;
+  margin: -50px;
   text-align: center; 
 }
 
 .offcanvas {
-  background: rgba(185, 185, 185, 0.897);
-  color: rgb(0, 0, 0);
+  background: rgba(44, 44, 44, 0.925);
+  color: rgb(255, 255, 255);
 }
 
 #barraDesplegable {
@@ -136,4 +140,23 @@ h6 {
   color:black;
   text-align: center;
 
+}
+
+#inicioDuenio {
+  background-image: url(../img/duenio.jpeg);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  height: 39rem;
+  padding-bottom: 0%;
+  margin-bottom: 0%;
+  display: flex;
+  align-items: center;
+       
+}
+
+#inicioCentrar {
+  display: flex;
+  align-items: center;
 }
