--- a/src/views/paginas/deporte.hbs
+++ b/src/views/paginas/deporte.hbs
@@ -1,3 +1,4 @@
+<div class="container">
   <div id="myCarousel" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
@@ -39,3 +40,4 @@
       <span class="sr-only"></span>
     </a>
   </div>
+</div>
