--- a/src/views/partials/barra.hbs
+++ b/src/views/partials/barra.hbs
@@ -2,13 +2,14 @@
 {{#if user}}
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="/">
+        <a class="navbar-brand" href="/paginas/deporte">
             <img src="/img/logo4.png" alt="" width="60" height="60" class="d-inline-block ">
             <h2 style="display: inline-block" >APPasionados</h2>
         </a>
         <li class="nav-item">
             <a class="nav-link " href="#" tabindex="-1" aria-disabled="true" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">Bienvenido {{user.nombreUsuario}}</a>
         </li>
+        
         <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
             <div class="offcanvas-header">
                 <h4 id="offcanvasRightLabel">{{user.nombre}}</h4>
@@ -21,7 +22,7 @@
                 <div class="container-fluid">
                     <a class="nav-link active" aria-current="page">
                         <div class="btn-group dropend">
-                            <a  href="#" class="link link-dark dropdown-toggle" type="link" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                            <a  href="#" class="link link-secondary dropdown-toggle" type="link" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
                                 Perfil
                             </a>
                             <ul id="barraDesplegable" class="dropdown-menu" aria-labelledby="navbarDarkDropdownMenuLink">
@@ -35,7 +36,7 @@
                     </a>
                     <a class="nav-link active" aria-current="page">
                         <div class="btn-group dropend">
-                            <a  href="#" class="link link-dark dropdown-toggle" type="link" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                            <a  href="#" class="link link-secondary dropdown-toggle" type="link" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
                                 Mis Equipos
                             </a>
                             <ul id="barraDesplegable" class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
@@ -60,7 +61,12 @@
                     </a>
                 </div>
                 <br>
+                <br>
                 <div class="container-fluid">
+                    <a class="link link-primary " href="/paginas/deporte" tabindex="-1" aria-disabled="true">Elegir deporte</a>
+                </div>
+                <div class="container-fluid" style="margin-top: 70%" >
+                    <hr class="dropdown-divider">
                     <a class="link link-danger " href="/cerrarSesion" tabindex="-1" aria-disabled="true">Cerrar sesión</a>
                 </div>
             </div>
