--- a/src/views/ingreso/registro.hbs
+++ b/src/views/ingreso/registro.hbs
@@ -20,7 +20,7 @@
                                 <input type="text" class="form-control" name="apellido" placeholder="Apellido" pattern="[a-zA-Z]{2,40}" required>
                             </div>
                              <div class="input-group mb-3">
-                                <input type="email" class="form-control" name="email" placeholder="E-mail"  oninvalid="this.setCustomValidity('Debe tener ""@..com')" required>
+                                <input type="email" class="form-control" name="email" placeholder="E-mail" required>
                             </div>
                             <div class="input-group mb-3">
                                 <input type="text" class="form-control" name="nombreUsuario" placeholder="Usuario" required>
