--- a/src/views/paginas/cancha.hbs
+++ b/src/views/paginas/cancha.hbs
@@ -31,7 +31,7 @@
             </div>
     </form>
     <br>
-    <button type="submit" class="btn btn-success btn-block">
+    <button type="submit" onclick="location.href='/ingresoDuenio'" class="btn btn-success btn-block">
         Crear Cancha
     </button>
 </div>    
