--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: black;
+  background-color: rgb(9, 121, 24)
 }
 #inicio {
   background-image: url(../img/imgInicio.jpg);
